# starsconf-telegram-bot

./: README.md  stack.yaml  starsconf-bot.cabal
app/: Main.hs
src/: Actions.hs  Keyboard.hs  Lib.hs  Messages.hs  State.hs  Types.hs  Utils.hs
src/API/: StarsConf.hs
src/Database/: Models.hs  Queries.hs
