name:                starsconf-bot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/starsconf-bot#readme
license:             GPLv3
license-file:        LICENSE
author:              Felipe Garay
maintainer:          felip@fgaray.cl
copyright:           2017 Felipe Garay
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Database.Models
                       Database.Queries
                       Types
                       API.StarsConf
                       Utils
                       Keyboard
                       State
                       Actions
                       Messages
  build-depends:       base >= 4.7 && < 5,
                       telegram-api,
                       http-client,
                       http-client-tls,
                       persistent,
                       persistent-template,
                       persistent-sqlite,
                       text,
                       mtl,
                       monad-logger,
                       resourcet,
                       esqueleto,
                       bytestring,
                       aeson,
                       time,
                       servant,
                       servant-client,
                       wai,
                       warp
  default-language:    Haskell2010

executable starsconf-bot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , starsconf-bot
  default-language:    Haskell2010

test-suite starsconf-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , starsconf-bot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/starsconf-bot
